@@ -50,6 +50,7 @@
 35. Move stream listings to github.
 36. Fix local file playback on remote MPD when MPD's curl is using IPv6.
 37. Install symbolic icon for GNOME shell.
+38. Add sort by track title to playqueue.
 
 2.0.1
 -----
